tests/parser/fail/class-primitive.som
"test:
fail: true
"

" `primitive` is not a valid class name "
primitive = ()
